--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "com.kirbyrawr.system.memory",
-    "version": "4.0.1",
-    "displayName": "System.Memory",
-    "description": "This is a package that contains the 'System.Memory' library.",
-    "unity": "2019.1",
-    "unityRelease": "1f1",
-    "dependencies": {
-      "com.kirbyrawr.system.buffers": "4.0.2",
-      "com.kirbyrawr.system.runtime.compilerservices.unsafe": "4.0.4"
-    },
-    "keywords": [
-      "system",
-      "dlls"
-    ],
-    "author": {
-      "name": "Kirbyrawr",
-      "email": "devkirbyrawr@gmail.com"
-    },
-    "type": "library"
-  }
+  "name": "com.kirbyrawr.system.memory",
+  "version": "4.0.1",
+  "displayName": "System.Memory",
+  "description": "This is a package that contains the 'System.Memory' library.",
+  "unity": "2019.1",
+  "unityRelease": "1f1",
+  "dependencies": {
+    "com.kirbyrawr.system.buffers": "4.0.2",
+    "com.kirbyrawr.system.runtime.compilerservices.unsafe": "4.0.4"
+  },
+  "keywords": [
+    "system",
+    "dlls"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Kirbyrawr/System.Memory-Unity.git"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Kirbyrawr",
+    "email": "devkirbyrawr@gmail.com"
+  },
+  "type": "library"
+}
